--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "antd": "^5.25.1",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
