client side almost completed

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.11.3",
+    "lucide": "^0.510.0",
+    "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
