--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,6 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
-    "serverless-http": "^3.2.0"
+    "nodemon": "^3.1.10"
   }
 }
